--- a/styles/notion.css
+++ b/styles/notion.css
@@ -173,8 +173,11 @@
 }
 
 .notion-page-cover {
-  max-width: 1200px;
-  border-radius: 24px;
+  margin-top: -54px;
+  height: 38.2vh;
+  max-height: 38.2vh;
+  /* max-width: 1200px;
+  border-radius: 24px; */
   box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
 }
 
