--- a/styles/notion.css
+++ b/styles/notion.css
@@ -173,7 +173,7 @@
 }
 
 .notion-page-cover {
-  margin-top: -54px;
+  margin-top: -58px;
   height: 38.2vh;
   max-height: 38.2vh;
   /* max-width: 1200px;
@@ -321,12 +321,12 @@
 }
 
 .notion-header {
-  background: hsla(0, 0%, 100%, 0.8);
-  backdrop-filter: saturate(180%) blur(16px);
+  background: hsla(0, 0%, 100%, 0.5);
+  backdrop-filter: saturate(180%) blur(8px);
 }
 
 .dark-mode .notion-header {
-  background: transparent;
+  background: rgb(55 55 55 / 30%);
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
   backdrop-filter: saturate(180%) blur(8px);
 }
